[package]
name = "bellhop-auth-header"
version = "0.2.0-dev"
authors = [
    "Joel Scarfone <jscarfon@akamai.com>",
    "Sam Wilson <sawilson@akamai.com>",
    "Tai Dickerson",
]
edition = "2018"
license = "Apache-2.0"
homepage = "https://bellhop.rs/"
repository = "https://github.com/bellhop-rs/bellhop"
description = "Authentication plugin for bellhop that uses an HTTP header"

[dependencies]
bellhop = { path = "../bellhop", version = "0.2.0-dev" }
regex = "1.1.0"
rocket = "0.4.0"
