[package]
name = "bellhop-demo"
version = "0.2.0"
authors = ["Sam Wilson <sawilson@akamai.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://bellhop.rs/"
repository = "https://github.com/bellhop-rs/bellhop"
description = "A demo of the bellhop asset reservation web application"

[dependencies]
bellhop = { path = "../bellhop", version = "0.2.0" }
bellhop-auth-dummy = { path = "../bellhop-auth-dummy", version = "0.2.0" }
bellhop-auth-header = { path = "../bellhop-auth-header", version = "0.2.0" }
bellhop-hook-jenkins = { path = "../bellhop-hook-jenkins", version = "0.2.0" }
bellhop-hook-email = { path = "../bellhop-hook-email", version = "0.2.0" }
