[package]
name = "bellhop-hook-email"
version = "0.3.0-dev"
authors = [
    "Joel Scarfone <jscarfon@akamai.com>",
    "Sam Wilson <sawilson@akamai.com>",
    "Tai Dickerson",
]
edition = "2018"
license = "Apache-2.0"
homepage = "https://bellhop.rs/"
repository = "https://github.com/bellhop-rs/bellhop"
description = "A bellhop hook that sends emails on certain events"

[dependencies]
bellhop = { path = "../bellhop", version = "0.3.0-dev" }

lettre = { version = "0.9.6", features = ["serde-impls", "native-tls"] }
lettre_email = "0.9"

native-tls = "0.2"

rocket = "0.4.0"

serde = "1.0.80"
serde_derive = "1.0.80"
