[package]
name = "bellhop"
version = "0.2.0"
authors = [
    "Joel Scarfone <jscarfon@akamai.com>",
    "Sam Wilson <sawilson@akamai.com>",
    "Tai Dickerson",
]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.0"

diesel = { version = "1.0.0", features = ["chrono", "postgres", "r2d2"] }

serde = "1.0.80"
serde_derive = "1.0.80"

typed-builder = "0.1.1"

[dependencies.rocket_codegen]
version = "0.4.0-rc.1"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.4.0-rc.1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.4.0-rc.1"
default-features = false
features = ["handlebars_templates", "serve", "diesel_postgres_pool"]
