[package]
name = "bellhop"
version = "0.2.0-dev"
authors = [
    "Joel Scarfone <jscarfon@akamai.com>",
    "Sam Wilson <sawilson@akamai.com>",
    "Tai Dickerson",
]
edition = "2018"
publish = false
license = "Apache-2.0"
homepage = "https://bellhop.rs/"
repository = "https://github.com/bellhop-rs/bellhop"
description = "Asset reservation web application with plugable authentication and hooks"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.0"

diesel = { version = "1.0.0", features = ["chrono", "postgres", "r2d2"] }

rocket = "0.4.0"

serde = "1.0.80"
serde_derive = "1.0.80"

typed-builder = "0.1.1"

url = "1.7.2"
url_serde = "0.2.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "serve", "diesel_postgres_pool", "json"]
